# rust-cc

./: .gdbinit  .gitignore  Cargo.toml  README
samples/: 1.c  while_loop.c
samples/include/: assert.h  ctype.h  errno.h  inttypes.h  limits.h  math.h  setjmp.h  signal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
samples/include/posix/: _impl_pwd_systypes.h  _impl_unistd_systypes.h  pwd.h  regex.h  unistd.h
samples/include/posix/sys/: types.h
src/: .main.rs.swp  .types.rs.swp  codegen.rs  main.rs  typecheck.rs  types.rs
src/ast/: .mod.rs.swp  mod.rs  pretty_print.rs
src/codegen/: cranelift.rs  mrustc_mmir.rs
src/parse/: .lex.rs.swp  .mod.rs.swp  .parsing.rs.swp  .preproc.rs.swp  expr.rs  lex.rs  mod.rs  parsing.rs  preproc.rs  token.rs  types.rs
src/preproc/: lex.rs  mod.rs  token.rs
tools/mmir_opt/: Cargo.toml
tools/mmir_opt/src/: dump.rs  helper_types.rs  lexer.rs  logger.rs  main.rs  mir.rs  modtree.rs  optimise.rs  parser.rs  types.rs  validate.rs
tools/mmir_opt/src/helper_types/: bitmap.rs  trie.rs
tools/mmir_opt/src/optimise/: const_propagate.rs
