[package]

name = "rcc"
version = "0.0.1"
authors = ["John Hodge <tpg@mutabah.net>"]

[dependencies]
log = "0.4"
env_logger = "0.5"
structopt = "0.2"
utf8reader = "0.1"

cranelift-frontend = "0.100"
cranelift-codegen = "0.100"
cranelift-module = "0.100"
cranelift-object = "0.100"
target-lexicon = "0.11"

[workspace]
members = ["tools/mmir_opt"]
